Changed layout of store and added image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,13 @@
 
   <body>
     <header class="main">
-      <%= image_tag '7apps.jpg', allt: 'The Pragmatic Bookshelf' %>
+      <%= image_tag 'logo.png', allt: 'The Pragmatic Bookshelf' %>
       <h1><%= @page_title %></h1>
     </header>
     <section class="content">
       <nav class="side_nav">
         <ul>
-          <li><a href="/Home"</a></li>
+          <li><a href="/home">Home</a></li>
           <li><a href="/questions">Questions</a></li>
           <li><a href="/news">News</a></li>
           <li><a href="/contact">Contact</a></li>
