--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
     <section class="content">
       <nav class="side_nav">
         <ul>
-          <li><a href="/Home"</a></li>
-          <li><a href="/questions">Questions</a></li>
-          <li><a href="/news">News</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="/"</a>Home</li>
+          <li><a href="/">Questions</a></li>
+          <li><a href="/">News</a></li>
+          <li><a href="/">Contact</a></li>
         </ul>
       </nav>
 
