--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,6 +1,3 @@
-# <h1>Store#index</h1>
-# <p>Find me in app/views/store/index.html.erb</p>
-
 <% if notice %>
   <aside id="notice"><%= notice %></aside>
 <% end %>
@@ -16,7 +13,7 @@
         <%= sanitize(product.description) %>
       </p>
       <div class="price">
-        <%= product.price %>
+        <%= number_to_currency(product.price) %>
         <%= button_to 'Add to Cart', line_items_path(path_id: product) %>
       </div>
     </li>
