Add buttons and layout to add iteas to a cart

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -5,7 +5,9 @@
 <h1>Your Pragmatic Catalog</h1>
 
 <ul class="catalog">
+  <% cache @products do %>
   <% @products.each do |product| %>
+    <% cache product do %>
     <li>
       <%= image_tag(product.image_url) %>
       <h2><%= product.title %></h2>
@@ -14,10 +16,12 @@
       </p>
       <div class="price">
         <%= number_to_currency(product.price) %>
-        <%= button_to 'Add to Cart', line_items_path(path_id: product) %>
+        <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
       </div>
     </li>
+    <% end %> 
   <% end %>
+<% end %>
 </ul>
 
 
